# efr32_platform_package

./: CMakeLists.txt  README.md  app_header_block.c.in  bl_header_block.c.in  crt0.c  header_block.c.in  syscalls.c
bsp/board/: brd4161a.h  bspconfig.h  capsenseconfig.h  displayconfig.h  displaypalconfig.h  em4config.h  expconfig.h  i2cspmconfig.h  mx25flash_config.h  retargetserialconfig.h  retargettextdisplayconfig.h  textdisplayconfig.h  traceconfig.h
bsp/common/: bsp.h  bsp_bcc.c  bsp_bcp.h  bsp_dk_3200.c  bsp_dk_3201.c  bsp_dk_bcreg_3200.h  bsp_dk_bcreg_3201.h  bsp_dk_leds.c  bsp_dk_mcuboard.c  bsp_stk.c  bsp_stk_ioexp.c  bsp_stk_ioexp.h  bsp_stk_leds.c  bsp_trace.c  cdc.c  cdc.h
common/: atcommand.c  atcommand.h  convert.c  convert.h  debug.h  dscrc16.c  dscrc16.h  dscrc8.c  dscrc8.h  io_device.c  io_device.h  radio_template.h  redirect.h  sip.c  sip.h  subg_mac.h  subg_packet.h  subg_packet_v2.h  sys.h  wg_data_v1.h  wg_data_v1.md
drivers/: CMakeLists.txt  README.md  bits.h  drv_debug.c  drv_debug.h  faults-v7m.s  irq.h  leuart_peripheral_map.c  leuartinterrupt.c  leuartinterrupt.h  pio_defs.h  reset_info.h  spi_peripheral_map.c  usart_peripheral_map.c  usartinterrupt.c  usartinterrupt.h  utils.h  yield.h
drivers/FXOS/: FXOS.c  FXOS.h
drivers/battery_monitor/: adc_peripheral_map.c  battery_monitor.c  battery_monitor.h  battery_monitor_extended.c  battery_monitor_extended.h
drivers/bootloader_api/: application_header.h  bootloader_api.c  bootloader_api.h  utils.c
drivers/delay/: CMakeLists.txt  delay.c  delay.h
drivers/dynamic_callbacks/: dynamic_callbacks.c  dynamic_callbacks.h
drivers/eeprom_cat24c16/: CMakeLists.txt  eeprom_cat24c16.c  eeprom_cat24c16.h
drivers/gpcrc/: CMakeLists.txt  gpcrc.c  gpcrc.h
drivers/i2cdrv/: CMakeLists.txt  i2c_peripheral_map.c  i2cdrv.c  i2cdrv.h  mfg_hw_test_i2c.c
drivers/imu_fxos/: CMakeLists.txt  imu_fxos.c  imu_fxos.h  imu_fxos_regs.h
drivers/lora_phy/: lora_phy.c  lora_phy.h
drivers/lora_simple_mac/: lora_simple_mac.c  lora_simple_mac.h
drivers/lorawan/: CMakeLists.txt  lorawan_band.h  lorawan_band_868.c  lorawan_band_868.h  lorawan_mac.c  lorawan_mac.h  lorawan_mac_868_defs.c  lorawan_mac_868_defs.h  lorawan_mac_crypto.c  lorawan_mac_crypto.h  lorawan_types.h  mcps.h
drivers/lorawan/crypto/: cmac.c
drivers/mbedtls/: CMakeLists.txt
drivers/mfg_hw_test/: CMakeLists.txt  README.md  mfg_hw_test.c  mfg_hw_test.h  mfg_hw_test_entry.c  mfg_hw_test_main.c  mfg_hw_test_menu.c  mfg_imu_test.c
drivers/ncp_spi/: CMakeLists.txt  ncp_spi.c  ncp_spi.h
drivers/pa_sky66112/: CMakeLists.txt  pa_sky66112.c  pa_sky66112.h
drivers/radio_efr32/: CMakeLists.txt  README.md  radio_efr32.c  radio_efr32.h  radio_efr32_buffer.c  rail_config.c  rail_config.h
drivers/radio_rfm9x/: CMakeLists.txt  radio_rfm9x.c  radio_rfm9x.h  radio_rfm9x_regs.h  spi_peripheral_map.c
drivers/radio_template/: radio_template.c  radio_template.h  radio_template.hpp
drivers/reset_info/: CMakeLists.txt  boot_info_map.h  cortex_m4_reg_defs.h  reset_info.c  reset_info.h  reset_info_common.h  reset_info_map.h
drivers/serial/: CMakeLists.txt  README.md  serial.c  serial.h
drivers/short_poll_manager/: short-poll-manager.c  short-poll-manager.h
drivers/simeeprom/: .gitignore  CMakeLists.txt  README.md  simeeprom.c  simeeprom.h
drivers/simeeprom/static/: README.md
drivers/simgbpr/: simgpbr.c  simgpbr.h
drivers/stack_struct/: stack32.c  stack32.h  stack_private.h
drivers/temperature_tmp116/: CMakeLists.txt  temperature_tmp116.c  temperature_tmp116.h  temperature_tmp116_reg.h
drivers/wg_mac/: README.md  wg_mac.c  wg_mac.h
drivers/wg_mac_ncp/: CMakeLists.txt  README.md  wg_mac_ncp.c  wg_mac_ncp.h
efr32mg12p/: Changes-Device.txt  efr32mg12p_acmp.h  efr32mg12p_adc.h  efr32mg12p_af_pins.h  efr32mg12p_af_ports.h  efr32mg12p_cmu.h  efr32mg12p_cryotimer.h  efr32mg12p_crypto.h  efr32mg12p_csen.h  efr32mg12p_devinfo.h  efr32mg12p_dma_descriptor.h  efr32mg12p_dmareq.h  efr32mg12p_emu.h  efr32mg12p_etm.h  efr32mg12p_fpueh.h  efr32mg12p_gpcrc.h  efr32mg12p_gpio.h  efr32mg12p_gpio_p.h  efr32mg12p_i2c.h  efr32mg12p_idac.h  efr32mg12p_ldma.h  efr32mg12p_ldma_ch.h  efr32mg12p_lesense.h  efr32mg12p_lesense_buf.h  efr32mg12p_lesense_ch.h  efr32mg12p_lesense_st.h  efr32mg12p_letimer.h  efr32mg12p_leuart.h  efr32mg12p_msc.h  efr32mg12p_pcnt.h  efr32mg12p_prs.h  efr32mg12p_prs_ch.h  efr32mg12p_prs_signals.h  efr32mg12p_rmu.h  efr32mg12p_romtable.h  efr32mg12p_rtcc.h  efr32mg12p_rtcc_cc.h  efr32mg12p_rtcc_ret.h  efr32mg12p_smu.h  efr32mg12p_timer.h  (+10 more)
emdrv/: Changes-emdrv.txt
emdrv/common/inc/: ecode.h
emdrv/config/: dmadrv_config.h  ezradiodrv_config.h  nvm_config.c  nvm_config.h  rtcdrv_config.h  spidrv_config.h  tempdrv_config.h  uartdrv_config.h  ustimer_config.h
emdrv/dmadrv/config/: dmadrv_config.h
emdrv/dmadrv/inc/: dmadrv.h
emdrv/nvm/inc/: nvm.h  (+1 more)
freertos/: CMakeLists.txt
freertos_trace/: CMakeLists.txt
hardware/kit/: Changes-Kit-Platform.txt
hardware/reference_design/: hwconf.xml
middleware/glib/: em_types.h
middleware/usb_gecko/: Changes_usb.txt
platform/base/: base-version.h
platform/bootloader/: esf.properties
platform/halconfig/: reference.html
protocol/flex_2.0/: esf.properties
protocol/zigbee_5.10/: esf.properties
protocol/zigbee_6.0/: esf.properties
protocol/zigbee_6.1/: esf.properties
resources/: carrier_sensing.xml  configurable_rx_window.xml  downlink_states.xml  efr32_memory_map.xml  join_request.xml  ncp_accepts_clients.xml  ncp_bookkeeping.xml  receive_window.xml  subg_mac_cmd_join_req.xml  subg_mac_join_response.xml  transceiver_state.xml  trasnceiver_state_ncp.xml  wg_mac_state_diagram.xml
scripts/: debug_openocd.gdb  debug_reset_openocd.gdb  efr32_jlink.cfg  efr32_stlink.cfg  efr32_stlink_nortos.cfg  efr32mg12p.ld  efr32mg12p_app_slot_0.ld  efr32mg12p_bluetooth.ld  efr32mg12p_bootloader.ld  efr32mg12p_flex.ld  efr32mg12p_simeeprom2.ld  efr32mg12p_zigbee.ld  efr32mg12p_zigbee_stack.ld  program_openocd.gdb  tokens-hatch-efr32.json
util/micrium/: micrium-krnx-docs.xml  micrium-krnx.properties
(+11926 files in other folders)
